tests/bad/03_missing_parens.src
# Test: Missing parentheses in function declaration
int main {  # Missing parentheses
    return 42;
}
